Fixed chroma text spacing

--- a/assets/_less/application.less
+++ b/assets/_less/application.less
@@ -18,7 +18,8 @@ h1, h2, h3, h4, h5, h6 {
 
 .chroma {
   letter-spacing:1.2em;
-  margin-right:-0.4em;
+  margin-right:-1em;
+  margin-left: 0.3em;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 100;
   font-size: 0.8em;
